# leetcode

./: .gitignore  .gitlab-ci.yml  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: bazel.yml  ccpp.yml
doc/: 0001_TwoSum.md  0002_AddTwoNumbers.md  0010_RegularMatching.md  README.md
include/: listnode.h  solution.h  solution.hpp  support.h  support.hpp  test.h
include/challenge/: 202008.h  challenge.h
include/prototype/: treenode.h
src/: CMakeLists.txt  main.cpp  solution.cc  solution.cpp  solution.h  support.cc  support.cpp  support.h
src/challenge/202008/: 11_DetectCapital.cc  12_HashSet.cc  13_ValidPalindrome.cc  14_PowerofFour.cc  15_WordDictionary.cc  16_FindDuplicates.cc  17_VerticalOrderTraversal.cc  21_PathSum.cc  23_ExcelColumnNumber.cc  27_LongestPalindrome.cc
src/solutions/: 0001_TwoSum.cc  0002_AddTwoNumbers.cc  0003_LongestSubstringWithoutRepeatingCharacters.cc  0004_MeidanofTwoSortedArrays.cc  0005_LongestPalindromicSubstring.cc  0006_ZigZagConversion.cc  0007_ReverseInteger.cc  0008_StringtoInteger.cc  0009_PalindromeNumber.cc  0010_RegularMatching.cc  0011_ContainerWithMostWater.cc  0012_IntegertoRoman.cc  0013_RomantoInteger.cc  0014_LongestCommonPrefix.cc  0015_3Sum.cc  0016_3SumClosest.cc  0017_LetterCombinations.cc  0018_FourSum.cc  0019_RemoveNthNode.cc  0020_ValidParentheses.cc  0021_MergeTwoSortedLists.cc  0022_GenerateParentheses.cc  0023_MergeKLists.cc  0024_SwapPairs.cc  0025_ReverseNodesinkGroup.cc  0026_RemoveDuplicatesfromSortedArray.cc  0027_RemoveElement.cc  0028_ImplementstrStr.cc  0029_Divide.cc  0030_FindSubString.cc  0031_NextPermutation.cc  0032_LongestValidParentheses.cc  0033_SearchRotatedSortedArray.cc  0034_FindElementsinSortedArray.cc  0035_SearchInsertPosition.cc  0036_ValidSudoku.cc  0037_SudokuSolver.cc  0038_CountandSay.cc  0039_CombinationSum.cc  0040_CombinationSum.cc  (+39 more)
test/: 0001_TwoSum.cc  0002_AddTwoNumbers.cc  0006_ZigZagConversion.cc  0008_StringtoInteger.cc  0011_ContainerWithMostWater.cc  0012_IntegertoRoman.cc  0016_3SumClosest.cc  0017_LetterCombinations.cc  0022_GenerateParentheses.cc  0024_SwapPairs.cc  0025_ReverseNodesinkGroup.cc  0026_RemoveDuplicatesfromSortedArray.cc  0027_RemoveElement.cc  0029_Divide.cc  0030_FindSubString.cc  0032_LongestValidParentheses.cc  0033_SearchRotatedSortedArray.cc  0035_SearchInsertPosition.cc  0036_ValidSudoku.cc  0039_CombinationSum.cc  0040_CombinationSum.cc  0041_MissingPositive.cc  0043_MultiplyString.cc  0045_JumpGame.cc  0047_Permutation2.cc  0048_RotateImage.cc  0049_GroupAnagrams.cc  0054_SpiralMatrix.cc  0056_MergeIntervals.cc  0057_InsertInterval.cc  0059_SpiralMatrix.cc  0060_PermutationSequence.cc  0061_RotateList.cc  0064_MinimumPathSum.cc  0067_AddBinary.cc  0068_TextJustfication.cc  0069_Sqrt.cc  0070_climbingStairs.cc  0083_RemoveDuplicatesfromSortedList.cc  CMakeLists.txt  (+2 more)
test/challenge/202008/: 11_DetectCapital.cc  12_HashSet.cc  13_ValidPalindrome.cc  14_PowerofFour.cc  15_WordDictionary.cc  16_FindDuplicates.cc  17_VerticalOrderTraversal.cc  21_PathSum.cc  23_ExcelColumnNumber.cc  27_LongestPalindrome.cc
test/main/: 0001_TwoSum.cc  0008_StringtoInteger.cc  0010_RegularMatching.cc  0012_IntegertoRoman.cc  0018_FourSum.cc  0019_RemoveNthNode.cc  0023_MergeKLists.cc  0026_RemoveDuplicatesfromSortedArray.cc  0028_ImplementstrStr.cc  0031_NextPermutation.cc  0034_FindElementsinSortedArray.cc  0037_SudokuSolver.cc  0038_CountandSay.cc  0039_CombinationSum.cc  0042_TrapRainWater.cc  0044_WildcardMatch.cc  0046_Permutations.cc  0051_NQueens.cc  0052_NQueens.cc  0053_MaximumSubarray.cc  0055_JumpGame.cc  0058_LengthofLastWord.cc  0062_UniquePaths.cc  0063_UniquePaths.cc  0065_ValidNumber.cc  0071_SimplifyPath.cc  0072.EditDistance.cc  0073_SetZeros.cc  0074_SearchMatrix.cc  0075_SortColors.cc  0208_ImplementTrie.cc
