# Bazel Build for leetcode

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

config_setting(
  name = "windows",
  constraint_values = ["@bazel_tools//platforms:windows"],
)

cc_library(
  name = "leetcode-solution",
  srcs = glob(
    include = [
      "src/solutions/*.cc",
    ]
  ),
  hdrs = glob([
    "include/solution.h",
    "include/prototype/*.h",
  ]),
  includes = [
    "include",
  ],
)

cc_library(
  name = "leetcode-challenge",
  srcs = glob(
    include = [
      "src/challenge/**/*.cc",
    ],
  ),
  hdrs = glob(
    include = [
      "include/challenge/*.h",
      "include/prototype/*.h",
    ],
    exclude = [
      "include/challenge/challenge.h"
    ],
  ),
  includes = [
    "include",
    "include/challenge"
  ],
)

cc_library(
  name = "leetcode-support",
  srcs = [
    "src/support.cc",
  ],
  hdrs = glob(
    include = [
      "include/prototype/*.h",
      "include/support.h"
    ]
  ),
  includes = [
    "include",
  ],
)

cc_test(
  name = "leetcode-test",
  size = "small",
  srcs = glob(
    include = [
      "test/main/*.cc",
      "include/test.h",
  ]),
  copts = ["-Iexternal/gtest/include"],
  deps = [
    "@gtest//:gtest-lib",
    ":leetcode-support",
    ":leetcode-solution",
  ],
)

cc_test(
  name = "leetcode-challenge-test",
  size = "small",
  srcs = glob(
    include = [
      "test/challenge/**/*.cc",
  ]),
  copts = ["-Iexternal/gtest/include"],
  deps = [
    "@gtest//:gtest-lib",
    ":leetcode-support",
    ":leetcode-challenge",
  ],
)
